# ggcc

./: .gitignore  CMakeLists.txt  main.py
src/: main.cpp
