cmake_minimum_required (VERSION 2.8.7)
set (CMAKE_CXX_STANDARD 14)
set(THREADS_PREFER_PTHREAD_FLAG ON)
project (ggcc)
find_package( OpenCV REQUIRED )
find_package( Threads REQUIRED )
file (GLOB SOURCES "src/*.cpp")
add_executable (bin/ggcc ${SOURCES})
target_link_libraries( bin/ggcc ${OpenCV_LIBS} )
target_link_libraries( bin/ggcc ${CMAKE_THREAD_LIBS_INIT})
